css/css.css
/*Elements*/
body {
	margin:0;
	padding:0;
	height:100%;
	background-color:#FCFFF5;
	font-family: 'Ubuntu', sans-serif;
	width:100%;
}

div {
	
}

h1, p, a{
	
	
}
a {
	text-decoration:none;
	color:#FCFFF5;
}

/*Wrapper to define the width of the page and keep contents within boundaries*/
.wrapper {
	min-height:100%;
	position:relative;
}

.right {
	float:right;
}
.left {
	float:left;
}

/*Classes for the Header bar*/
.topbar {
	list-style-type:none;
	margin:0px;
	padding:0px;
	background-color:#3E606F;
	color:#FCFFF5;
	height:90px;
}

.topbar h2 {
	margin-left:12%;
	padding-top:10px;
	float:left;
}

.breadbar {
	float:right;
}


.breadbar ul {
	list-style: none;
	text-align: center;
	padding: 0;
	margin-right:12%;
	margin-top: 25px;
	
}
.breadbar li {
	display:inline-block;
	padding:10px;
	text-align:left;
	vertical-align:middle;
	font-weight: bold;

}

/*Classes for the Slick Image Carousel*/
.carousel {
	
}
.imagecar h1 {
	text-align: center;
	margin-top:100px;
}
.imagecar p {
	text-align: center;
}
.imagecar {

    margin-left: 0;
    margin-right: 0;
	background-color:#91AA9D;
	height:300px;
	width:100%;
	color:#FCFFF5;
}

/*Classes for the Contents of the page*/
.content { 
	margin-left:12%;
	margin-right:12%;
	padding-bottom:90px
}
.content h1 {
	
}
.leftcol {
	width:48%;
	text-align:left;
	border-right:1px solid black;
	border-style:none groove none none;
	display: inline-block;
	padding-right:10px;
}
.rightcol {
	width:48%;
	text-align:right;
	display: inline-block;
	padding-left:10px;
}
.rightcol h1, .rightcol p{
	text-align:left;
}
.button {
	width:25%;
	border-radius: 10px;
    background-color: #D1DBBD;
	text-align:center;
}

.bottombar {
	background:#3E606F;
	color:#FCFFF5;
	width:100%;
	height:90px;
	position:absolute;
	bottom:0;
	left:0;
}
.bottombar h2 {
	margin-left:12%;
	padding-top:10px;
}

